--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       body {
         margin: 0;
         padding: 0;
-        background: transparent url(/globe/loading.gif) center center no-repeat;
+        background: transparent url(/Earth-Globe/globe/loading.gif) center center no-repeat;
         color: #ffffff;
         font-family: sans-serif;
         font-size: 13px;
@@ -123,10 +123,10 @@
     <span>This is a Chrome Experiment</span>
   </a>
 
-  <script type="text/javascript" src="/globe/third-party/Detector.js"></script>
-  <script type="text/javascript" src="/globe/third-party/three.min.js"></script>
-  <script type="text/javascript" src="/globe/third-party/Tween.js"></script>
-  <script type="text/javascript" src="/globe/globe.js"></script>
+  <script type="text/javascript" src="/Earth-Globe/globe/third-party/Detector.js"></script>
+  <script type="text/javascript" src="/Earth-Globe/globe/third-party/three.min.js"></script>
+  <script type="text/javascript" src="/Earth-Globe/globe/third-party/Tween.js"></script>
+  <script type="text/javascript" src="/Earth-Globe/globe/globe.js"></script>
   <script type="text/javascript">
 
     if(!Detector.webgl){
