--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       
       
       xhr = new XMLHttpRequest();
-      xhr.open('GET', '/globe/groups.json', true);
+      xhr.open('GET', '/Earth-Globe/groups.json', true);
       xhr.onreadystatechange = function(e) {
         if (xhr.readyState === 4) {
           if (xhr.status === 200) {
