--- a/index.html
+++ b/index.html
@@ -16,31 +16,11 @@
         font-size: 13px;
         line-height: 20px;
         height: 100%;
-      }
-
-      #info {
-
-        font-size: 11px;
-        position: absolute;
-        bottom: 5px;
-        background-color: rgba(0,0,0,0.8);
-        border-radius: 3px;
-        right: 10px;
-        padding: 10px;
-
-      }
-
-      #currentInfo {
-        width: 270px;
-        position: absolute;
-        left: 20px;
-        top: 63px;
-
-        background-color: rgba(0,0,0,0.2);
-
-        border-top: 1px solid rgba(255,255,255,0.4);
-        padding: 10px;
-      }
+		}
+		
+		#container {
+			height: 100%;
+		}
 
       a {
         color: #aaa;
@@ -53,35 +33,6 @@
       .bull {
         padding: 0 5px;
         color: #555;
-      }
-
-      #title {
-        position: absolute;
-        top: 20px;
-        width: 270px;
-        left: 20px;
-        background-color: rgba(0,0,0,0.2);
-        border-radius: 3px;
-        font: 20px Georgia;
-        padding: 10px;
-      }
-
-      .year {
-        font: 16px Georgia;
-        line-height: 26px;
-        height: 30px;
-        text-align: center;
-        float: left;
-        width: 90px;
-        color: rgba(255, 255, 255, 0.4);
-
-        cursor: pointer;
-        -webkit-transition: all 0.1s ease-out;
-      }
-
-      .year:hover, .year.active {
-        font-size: 23px;
-        color: #fff;
       }
 
       #ce span {
@@ -97,32 +48,48 @@
         left: 20px;
         background: url(/Earth-Globe/ce.png);
       }
+	  
+	  #fallback {
+		display: none;
+		position: relative;
+		height: 100%;
+	  }
+	  
+	  #fallback img {
+		display: block;
+		max-width: 100%;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	  }
 
 
     </style>
   </head>
   <body>
 
-  <div id="container"></div>
-
-  <div id="currentInfo">
-    <span id="year1990" class="year">1990</span>
-    <span id="year1995" class="year">1995</span>
-    <span id="year2000" class="year">2000</span>
+  <div id="container">
+	<div id='fallback'>
+		<img src='blue.png' />
+	</div>
   </div>
 
-  <div id="title">
-    World Population
-  </div>
+  
 
   <script type="text/javascript" src="/Earth-Globe/third-party/Detector.js"></script>
   <script type="text/javascript" src="/Earth-Globe/third-party/three.min.js"></script>
   <script type="text/javascript" src="/Earth-Globe/third-party/Tween.js"></script>
   <script type="text/javascript" src="/Earth-Globe/globe.js"></script>
   <script type="text/javascript">
+  
+	function showFallback(){
+		document.getElementById('fallback').style.display = 'block';
+	}
 
-    if(!Detector.webgl){
-      Detector.addGetWebGLMessage();
+    //if(!Detector.webgl || true){
+	if(!Detector.webgl){
+      showFallback();
     } else {
 
       var years = ['1990','1995','2000'];
@@ -135,22 +102,8 @@
       var settime = function(globe, t) {
         return function() {
           new TWEEN.Tween(globe).to({time: t/years.length},500).easing(TWEEN.Easing.Cubic.EaseOut).start();
-          var y = document.getElementById('year'+years[t]);
-          if (y.getAttribute('class') === 'year active') {
-            return;
-          }
-          var yy = document.getElementsByClassName('year');
-          for(i=0; i<yy.length; i++) {
-            yy[i].setAttribute('class','year');
-          }
-          y.setAttribute('class', 'year active');
         };
       };
-      
-      for(var i = 0; i<years.length; i++) {
-        var y = document.getElementById('year'+years[i]);
-        y.addEventListener('mouseover', settime(globe,i), false);
-      }
       
       var xhr;
       TWEEN.start();
