--- a/shell/index.html
+++ b/shell/index.html
@@ -87,8 +87,8 @@
 		document.getElementById('fallback').style.display = 'block';
 	}
 
-    if(!Detector.webgl || true){
-	//if(!Detector.webgl){
+    //if(!Detector.webgl || true){
+	if(!Detector.webgl){
       showFallback();
     } else {
 
