--- a/demograph/index.html
+++ b/demograph/index.html
@@ -71,7 +71,7 @@
 
   <div id="container">
 	<div id='fallback'>
-		<img src='demograph/blue.png' />
+		<img src='/Earth-Globe/demograph/backup.gif' />
 	</div>
   </div>
 
