--- a/partners/index.html
+++ b/partners/index.html
@@ -71,7 +71,7 @@
 
   <div id="container">
 	<div id='fallback'>
-		<img src='/Earth-Globe/partners/blue.png' />
+		<img src='/Earth-Globe/partners/backup.gif' />
 	</div>
   </div>
 
