--- a/moon2/index.html
+++ b/moon2/index.html
@@ -106,13 +106,13 @@
   <div id="container"></div>
 
   <div id="currentInfo">
-    <span id="year1990" class="year">1990</span>
-    <span id="year1995" class="year">1995</span>
-    <span id="year2000" class="year">2000</span>
+    <span id="year1990" class="year">Apollo</span>
+    <span id="year1995" class="year">Landers</span>
+    <span id="year2000" class="year">Impacts</span>
   </div>
 
   <div id="title">
-    World Population
+    Lunar Heritage
   </div>
 
   <script type="text/javascript" src="/Earth-Globe/moon2/third-party/Detector.js"></script>
@@ -125,7 +125,7 @@
       Detector.addGetWebGLMessage();
     } else {
 
-      var years = ['1990','1995','2000'];
+      var years = ['Apollo','Landers','Impacts'];
       var container = document.getElementById('container');
       var globe = new DAT.Globe(container);
 
