--- a/moon2/index.html
+++ b/moon2/index.html
@@ -112,7 +112,7 @@
   </div>
 
   <div id="title">
-    Lunar Heritage
+    Lunar Heritage Sites
   </div>
 
   <script type="text/javascript" src="/Earth-Globe/moon2/third-party/Detector.js"></script>
@@ -125,7 +125,7 @@
       Detector.addGetWebGLMessage();
     } else {
 
-      var years = ['Apollo','Landers','Impacts'];
+      var years = ['1990','1995','2000'];
       var container = document.getElementById('container');
       var globe = new DAT.Globe(container);
 
